# ssh-central-agent

./: .gitignore  AGENTS.md  LICENSE  PYTHON_PORT.md  README.md  SETUP.md  addhost  functions.sh  localvars-example.yml  playbook.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sca.bash  sca.py  sca_wrapper  sshagentmux.py
hosts/: README.md
sca/: __init__.py  __main__.py  agent.py  agentmux.py  cli.py  config.py  connection.py  logging_utils.py  multiplexer.py  platform_utils.py  process.py  sca_python.j2  socket_utils.py
templates/: config.j2  config_match.j2  config_sca_common.j2  config_single.j2  sca.j2  sca.py.j2  sca_python.j2  sca_shim.j2  sca_windows.bat.j2
tests/: __init__.py  test_agent.py  test_logging_utils.py  test_platform_utils.py  test_socket_utils.py
